--- a/cal.css
+++ b/cal.css
@@ -1,5 +1,15 @@
 .cal{
     padding: 20px;
     margin: 20px;
-
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    
+}
+#total{
+    display:block;
+    border: 2px solid;
+    padding: 20px;
+    margin: 20px;
 }
